# stringie

./: .gitignore  LICENSE  README.md  pyproject.toml
stringie/: __main__.py  bucket.py  config.py  stringie.py
